--- a/code/1.html
+++ b/code/1.html
@@ -238,29 +238,7 @@
         <table class="tweet  "
        href="/marionvictor833/status/850733397462921217?p=v">
   
-<tr class="tweet-header ">
-        <td class="avatar" rowspan="3">
-    <a href="/marionvictor833?p=i">
-      <img alt="Trou Khmer" src="https://pbs.twimg.com/profile_images/733289920005996544/7ne8BNqK_normal.jpg" />
-    </a>
-  </td>
 
-      <td class="user-info">
-  <a href="/marionvictor833?p=s">
-    <strong class="fullname">Trou Khmer</strong>
-    <div class="username">
-      <span>@</span>marionvictor833
-    </div>
-    
-  </a>
-</td>
-
-
-  <td class="timestamp">
-    <a name="tweet_850733397462921217" href="/marionvictor833/status/850733397462921217?p=p">Apr 8</a>
-  </td>
-
-</tr>
 <tr class="tweet-container">
   <td colspan="2" class="tweet-content">
 
@@ -314,9 +292,9 @@
 
       <td class="user-info">
   <a href="/voakhmer?p=s">
-    <strong class="fullname">VOA Khmer</strong>
+    <strong class="fullname">VOA Khmerdsf</strong>
     <div class="username">
-      <span>@</span>voakhmer
+      <span>@</span>voakhmerw
     </div>
     
   </a>
